<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.joyapeak.sarcazon.ui.profile.ProfileActivity">
    <item
        android:id="@+id/action_all"
        android:title="@string/all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_featured"
        android:title="@string/featured"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_subscriptions"
        android:title="@string/subscriptions"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upload"
        android:title="@string/upload"
        app:showAsAction="never" />
</menu>