<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/custom_match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:layout_width="match_parent">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card-view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        card-view:cardBackgroundColor="@color/backgroundLight"
        card-view:cardCornerRadius="@dimen/radius_large"
        card-view:cardPreventCornerOverlap="false">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dialog_padding_vertical"
            android:paddingLeft="@dimen/dialog_padding_horizontal"
            android:paddingRight="@dimen/dialog_padding_horizontal"
            android:paddingTop="@dimen/dialog_padding_vertical">

            <TextView
                style="@style/Text_Body1_Regular_Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/register_prompt_msg" />

            <Button
                android:id="@+id/btn_registerPrompt_login"
                style="@style/BtnRounded"
                android:layout_width="@dimen/btn_width_large"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_padding_vertical"
                android:text="@string/login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_registerPrompt_facebookLogin"
                style="@style/BtnRounded"
                android:layout_width="@dimen/btn_width_large"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:text="@string/facebook_login"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_registerPrompt_register"
                style="@style/BtnRounded"
                android:layout_width="@dimen/btn_width_large"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>