<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/custom_match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:layout_width="match_parent">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:card-view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        card-view:cardBackgroundColor="@color/backgroundLight"
        card-view:cardCornerRadius="@dimen/radius_large"
        card-view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layoutDirection="ltr"
            android:paddingTop="@dimen/dialog_padding_vertical">

            <TextView
                android:id="@+id/tv_urlPasteDialog_title"
                style="@style/Text_Body1_Regular_Sec_Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dialog_padding_horizontal"
                android:layout_marginRight="@dimen/dialog_padding_horizontal"
                android:text="@string/url_paste_video_hint_title" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/et_urlPasteDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dialog_padding_horizontal"
                android:layout_marginRight="@dimen/dialog_padding_horizontal"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/url_paste_hint"
                android:inputType="text"
                android:maxLength="@integer/url_max_length"
                android:maxLines="1"
                android:paddingLeft="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                app:met_baseColor="@color/white"
                app:met_floatingLabel="none"
                app:met_primaryColor="@color/colorAccent"
                app:met_textColor="@color/white"
                app:met_textColorHint="@color/white_op12"
                app:met_underlineColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/cancel" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/white_op12" />

                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:text="@string/done" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>